ddetect (0.90) UNRELEASED; urgency=low

  * Petter Reinholdtsen
    - Stop hw-detect from failing if /etc/network/ is
      missing. (Closes: #245535)
    - Log when pcmcia and hotplut support is detected.

 -- Petter Reinholdtsen <pere@debian.org>  Fri, 23 Apr 2004 19:32:16 +0200

ddetect (0.89) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll

 -- Joey Hess <joeyh@debian.org>  Fri, 23 Apr 2004 13:03:38 -0400

ddetect (0.88) unstable; urgency=low

  * Joey Hess
    - In ethdetect, always register-module manually selected modules.
  * Updated translations: 
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll

 -- Joey Hess <joeyh@debian.org>  Wed, 21 Apr 2004 23:35:31 -0400

ddetect (0.87) unstable; urgency=low

  * Joey Hess
    - Add a new template, hw-detect/start_pcmcia, as a kind of workaround for
      systems where starting pcmcia hangs the system (Dell inspirons..).
      Due to the string freeze, this question is not translated or displayed
      to the user yet, but it can be overridden at boot time.

 -- Joey Hess <joeyh@debian.org>  Mon, 19 Apr 2004 20:23:26 -0400

ddetect (0.86) unstable; urgency=low

  * Colin Watson
    - Better error checking and quoting around airport detection.
  * Updated translations: 
    - German (de.po) by Alwin Meschede
    - Finnish (fi.po) by Tapio Lehtonen
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Norwegian (nn.po) by Håvard Korsvoll

 -- Colin Watson <cjwatson@debian.org>  Mon, 19 Apr 2004 15:13:26 +0100

ddetect (0.85) unstable; urgency=low

  * Sven Luther
    - Don't always load the airport module on powerpc, but do the real thing,
      and check if it is available or not (Closes: #221533).
  * Martin Michlmayr
    - Don't show missing modules twice (Closes: #244145).