@@ -4,6 +4,9 @@ ddetect (0.90) UNRELEASED; urgency=low
     - Stop hw-detect from failing if /etc/network/ is
       missing. (Closes: #245535)
     - Log when pcmcia and hotplut support is detected.
+    - Rewrite the code detecting which version of discover to use, and
+      make it easier to change which package to install in /target/
+      based on this.
 
  -- Petter Reinholdtsen <pere@debian.org>  Fri, 23 Apr 2004 19:32:16 +0200
 
